objects/Record_History__c.object
<CustomObject>
    <description>Record History</description>
    <fields>
        <fullName>Actual_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Actual Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Record_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval_Process_Name__c</fullName>
        <description>Approval Process Name</description>
        <label>Approval Process Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Approver</description>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approver</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Case Object Id</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Approval_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>End Date/Time</description>
        <inlineHelpText>End Date/Time</inlineHelpText>
        <label>End Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>No_of_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The formula to calculate the field:  CaseStatusRecHistory.No_of_Hours__c = (Businesshours.diff(bh,CaseStatusRecHistory.Start_Date__c, System.Now())/(1000*60*60))</description>
        <label>No of Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Queue_Approver__c</fullName>
        <label>Queue Approver</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cross referencing</fullName>
                </value>
                <value>
                    <fullName>Pricing</fullName>
                </value>
                <value>
                    <fullName>DOA</fullName>
                </value>
                <value>
                    <fullName>Pending Award</fullName>
                </value>
                <value>
                    <fullName>DOA Rejected/Recalled</fullName>
                </value>
                <value>
                    <fullName>Revisit</fullName>
                </value>
                <value>
                    <fullName>Pricing Implementation</fullName>
                </value>
                <value>
                    <fullName>Won</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Start Date/Time</description>
        <inlineHelpText>Start Date/Time</inlineHelpText>
        <label>Start Date/Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Awaiting Action</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Case Review</fullName>
                </value>
                <value>
                    <fullName>Awaiting Information</fullName>
                </value>
                <value>
                    <fullName>Pending Award</fullName>
                </value>
                <value>
                    <fullName>Backlog</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WRF_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>WRF Task</description>
        <label>WRF Task</label>
        <referenceTo>WRF_Task__c</referenceTo>
        <relationshipLabel>Record History</relationshipLabel>
        <relationshipName>WRF_Task</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Record History</label>
    <nameField>
        <displayFormat>AHN-{0000000000}</displayFormat>
        <label>Record History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Record History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>